--- a/Pandas and python practice.ipynb
+++ b/Pandas and python practice.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "4   95000  11948     $52,000  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "87   75000  12067     $67,000  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "max       2009.000000  160000.000000  20960.000000"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "66000.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "Name: Savings ($), Length: 88, dtype: object"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "4   95000  11948       52000   52000  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "4   95000  11948       52000   52000  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,18 +973,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Maleale    49\n",
-       "Female     39\n",
+       "Male      49\n",
+       "Female    39\n",
        "Name: Gender, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
        "75000.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
        "84090.90909090909"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "21234.128008173615"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>2006</td>\n",
-       "      <td>Maleale</td>\n",
+       "      <td>Male</td>\n",
        "      <td>Married</td>\n",
        "      <td>Standard Diploma</td>\n",
        "      <td>No</td>\n",
@@ -1128,14 +1128,14 @@
        "</div>"
       ],
       "text/plain": [
-       "    Year Graduated   Gender Marital Status      Diploma Type Defaulted  \\\n",
-       "18            2006  Maleale        Married  Standard Diploma        No   \n",
+       "    Year Graduated Gender Marital Status      Diploma Type Defaulted  Salary  \\\n",
+       "18            2006   Male        Married  Standard Diploma        No  140000   \n",
        "\n",
-       "    Salary    Fee Savings ($) Savings  \n",
-       "18  140000  20960       72000   72000  "
+       "      Fee Savings ($) Savings  \n",
+       "18  20960       72000   72000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
        "4   95000  11948       52000   52000  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 158,
    "metadata": {
     "scrolled": false
    },
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
        "Text(0, 0.5, 'savings')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 161,
    "metadata": {
     "scrolled": false
    },
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
