--- a/employee attrition.ipynb
+++ b/employee attrition.ipynb
@@ -621,11 +621,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "based on the two tables i have created it seems like  distance is great factor that is contributing to employee attrition,employees that have short distance from the home seems to be the ones that are leaving compared to the ones that have long distance from home, and also monthly income seems to be contributing to employee attrition ,employees that earn more money seems to staying rather than those who earn less,so my recomemndation is to increase employees monthly income if we dont want the employees to leave. "
+   ]
   },
   {
    "cell_type": "code",
@@ -657,4 +657,3 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
-based on the two tables i have created it seems like  distance is great factor that is contributing to employee attrition,employees that have short distance from the home seems to be the ones that are leaving compared to the ones that have long distance from home, and also monthly income seems to be contributing to employee attrition ,employees that earn more money seems to staying rather than those who earn less,so my recomemndation is to increase employees monthly income if we dont want the employees to leave.
